Enable config for dark_theme, format, short
Deprecate hosh.idc and hosh.sidc