@@ -15,6 +15,7 @@ wheel = "^0.37.0"
 blake3 = "^0.2.0"
 colored = "1.4.2"
 ansi2html = "^1.6.0"
+bs4 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 pdoc3 = "^0.10.0"
