@@ -26,7 +26,7 @@ from hosh._internals_appearance import ANSI, BW, HTML
 GLOBAL = {"dark_theme": True, "format": ANSI(), "short": False}
 
 
-def setup(dark_theme: bool = None, format: Union[BW, ANSI, HTML] = None, short: bool = None):
+def setup(dark_theme: bool = None, format: Union[BW, ANSI, HTML, callable] = None, short: bool = None):
     """
     Change global settings
 
@@ -50,7 +50,23 @@ def setup(dark_theme: bool = None, format: Union[BW, ANSI, HTML] = None, short: 
 
     >>> setup(format=HTML, short=True)
     >>> Hosh(b"asd")
-    <span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ó</span><span class="ansi38-36"></span><span class="ansi1 ansi38-36"></span><span class="ansi1 ansi38-36 ansi48-15">ӭ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ϳ</span><span class="ansi38-28"></span><span class="ansi1 ansi38-28"></span><span class="ansi1 ansi38-28 ansi48-15">ơ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ө</span><span class="ansi38-35"></span><span class="ansi1 ansi38-35"></span><span class="ansi1 ansi38-35 ansi48-15">ǹ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ƹ</span><span class="ansi38-29"></span><span class="ansi1 ansi38-29"></span><span class="ansi1 ansi38-29 ansi48-15">O</span><span class="ansi38-30"></span><span class="ansi1 ansi38-30"></span><span class="ansi1 ansi38-30 ansi48-15">ä</span><span class="ansi38-2"></span><span class="ansi1 ansi38-2"></span><span class="ansi1 ansi38-2 ansi48-15">Ď</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ë</span><span class="ansi38-29"></span><span class="ansi1 ansi38-29"></span><span class="ansi1 ansi38-29 ansi48-15">ϊ</span><span class="ansi38-28"></span><span class="ansi1 ansi38-28"></span><span class="ansi1 ansi38-28 ansi48-15">ɜ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ā</span><span class="ansi38-36"></span><span class="ansi1 ansi38-36"></span><span class="ansi1 ansi38-36 ansi48-15">ҙ</span><span class="ansi38-2"></span><span class="ansi1 ansi38-2"></span><span class="ansi1 ansi38-2 ansi48-15">ĉ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ý</span><span class="ansi38-36"></span><span class="ansi1 ansi38-36"></span><span class="ansi1 ansi38-36 ansi48-15">Ů</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ƶ</span><span class="ansi38-28"></span><span class="ansi1 ansi38-28"></span><span class="ansi1 ansi38-28 ansi48-15">Ŗ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ġ</span><span class="ansi38-35"></span><span class="ansi1 ansi38-35"></span><span class="ansi1 ansi38-35 ansi48-15">í</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Һ</span><span class="ansi38-29"></span><span class="ansi1 ansi38-29"></span><span class="ansi1 ansi38-29 ansi48-15">Ӟ</span><span class="ansi38-30"></span><span class="ansi1 ansi38-30"></span><span class="ansi1 ansi38-30 ansi48-15">À</span>
+    <style type="text/css">
+     .ansi2html-content { display: inline; white-space: pre-wrap; word-wrap: break-word; }
+    .body_foreground { color: #000000; }
+    .body_background { background-color: #AAAAAA; }
+    .inv_foreground { color: #AAAAAA; }
+    .inv_background { background-color: #000000; }
+    .ansi1 { font-weight: bold; }
+    .ansi38-2 { color: #00aa00; }
+    .ansi48-15 { background-color: #ffffff; }
+    .ansi38-23 { color: #005f5f; }
+    .ansi38-28 { color: #008700; }
+    .ansi38-29 { color: #00875f; }
+    .ansi38-30 { color: #008787; }
+    .ansi38-35 { color: #00af5f; }
+    .ansi38-36 { color: #00af87; }
+    </style>
+    <pre class="ansi2html-content"><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ó</span><span class="ansi38-36"></span><span class="ansi1 ansi38-36"></span><span class="ansi1 ansi38-36 ansi48-15">ӭ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ϳ</span><span class="ansi38-28"></span><span class="ansi1 ansi38-28"></span><span class="ansi1 ansi38-28 ansi48-15">ơ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ө</span><span class="ansi38-35"></span><span class="ansi1 ansi38-35"></span><span class="ansi1 ansi38-35 ansi48-15">ǹ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ƹ</span><span class="ansi38-29"></span><span class="ansi1 ansi38-29"></span><span class="ansi1 ansi38-29 ansi48-15">O</span><span class="ansi38-30"></span><span class="ansi1 ansi38-30"></span><span class="ansi1 ansi38-30 ansi48-15">ä</span><span class="ansi38-2"></span><span class="ansi1 ansi38-2"></span><span class="ansi1 ansi38-2 ansi48-15">Ď</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ë</span><span class="ansi38-29"></span><span class="ansi1 ansi38-29"></span><span class="ansi1 ansi38-29 ansi48-15">ϊ</span><span class="ansi38-28"></span><span class="ansi1 ansi38-28"></span><span class="ansi1 ansi38-28 ansi48-15">ɜ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ā</span><span class="ansi38-36"></span><span class="ansi1 ansi38-36"></span><span class="ansi1 ansi38-36 ansi48-15">ҙ</span><span class="ansi38-2"></span><span class="ansi1 ansi38-2"></span><span class="ansi1 ansi38-2 ansi48-15">ĉ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">ý</span><span class="ansi38-36"></span><span class="ansi1 ansi38-36"></span><span class="ansi1 ansi38-36 ansi48-15">Ů</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ƶ</span><span class="ansi38-28"></span><span class="ansi1 ansi38-28"></span><span class="ansi1 ansi38-28 ansi48-15">Ŗ</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Ġ</span><span class="ansi38-35"></span><span class="ansi1 ansi38-35"></span><span class="ansi1 ansi38-35 ansi48-15">í</span><span class="ansi38-23"></span><span class="ansi1 ansi38-23"></span><span class="ansi1 ansi38-23 ansi48-15">Һ</span><span class="ansi38-29"></span><span class="ansi1 ansi38-29"></span><span class="ansi1 ansi38-29 ansi48-15">Ӟ</span><span class="ansi38-30"></span><span class="ansi1 ansi38-30"></span><span class="ansi1 ansi38-30 ansi48-15">À</span></pre>
 
     >>> setup(dark_theme=True, format=ANSI, short=False)
 
